# ESP_TESTING

./: .gitignore  CMakeLists.txt  README.md  pytest.ini  sdkconfig  sdkconfig.old  start_pytest.bat  start_test.bat  start_unit_test.bat
components/MFRC522/include/: MFRC522.hpp
components/MFRC522/src/: MFRC522.cpp
components/MFRC522/test/: test_rc522.cpp
components/RFID/: CMakeLists.txt
components/RFID/help/: readme
components/RFID/include/: rfid.hpp  serial.hpp
components/RFID/src/: rfid.cpp  serial.cpp
components/RFID/test/: CMakeLists.txt  test_rfid.cpp
components/help_tools/include/: help_tools.hpp
components/help_tools/src/: help_tools.cpp
components/help_tools/test/: CMakeLists.txt  test_tools.cpp
components/mcard/: CMakeLists.txt
components/mcard/include/: sdcard.hpp
components/mcard/src/: sdcard.cpp
components/mcard/test/: CMakeLists.txt  test_mcard.cpp
components/mfrc/include/: MFRC522.hpp  MFRC522Extended.hpp
components/mfrc/src/: MFRC522.cpp  MFRC522Extended.cpp  MFRC522_i2c.cpp  MFRC522_spi.cpp  MFRC522_uart.cpp
components/mfrc/test/: CMakeLists.txt  test_serial.cpp
components/rc522/include/: rc522.hpp
components/serial_component/: CMakeLists.txt
main/: CMakeLists.txt  app_main.cpp  camera.cpp  camera.hpp
peripherial_module/pico_module/: CMakeLists.txt
peripherial_module/pico_module/test/: CMakeLists.txt  MakeF  start.bat  test_keypad.cpp
pico_module/: CMakeLists.txt  button.c  main.h
test/: CMakeLists.txt  pytest_unittest.py  sdkconfig  sdkconfig.old
test/main/: unit_test_.c  unit_test_test.c
(+10 files in other folders)
